output/dev/llvm/stringescapequote.llvm.bc.err
/Users/cmk/llvm/bin/llvm-as: /Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/stringescapequote.llvm:7:13: error: '@print_string' defined with type 'void (i32*)*'
  call void @print_string([4 x i16] [i16 23586, i16 8738, i16 0, i16 32])
            ^
